[gd_scene load_steps=15 format=3 uid="uid://d4liswcgcj3gv"]

[ext_resource type="Script" path="res://Enemies/box.gd" id="1_lijfw"]
[ext_resource type="Texture2D" uid="uid://boc6wxbub60d7" path="res://Assets/openart/Crate/Crate.png" id="2_lh5bg"]
[ext_resource type="Texture2D" uid="uid://17teytk2ii7n" path="res://Assets/openart/Crate/Crate_D.png" id="3_y1kgg"]
[ext_resource type="Texture2D" uid="uid://iuubamp67uys" path="res://Assets/openart/Crate/Crate_C.png" id="4_r2hl5"]
[ext_resource type="Texture2D" uid="uid://2gug2r8qyuqb" path="res://Assets/openart/Crate/Crate_B.png" id="5_4g8yu"]
[ext_resource type="Texture2D" uid="uid://c0tik14ibq36" path="res://Assets/openart/Crate/Crate_A.png" id="6_3s03k"]
[ext_resource type="AudioStream" uid="uid://73ddj7vkq7rb" path="res://Assets/explosion_trim.ogg" id="12_wl375"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arwxv"]
size = Vector2(30, 24)

[sub_resource type="Animation" id="Animation_t1ucv"]
resource_name = "Destroy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_box:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_mge1y"]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_box:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_gx75t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_box:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_17lby"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_box:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tvdaq"]
_data = {
"Destroy": SubResource("Animation_t1ucv"),
"Hit": SubResource("Animation_mge1y"),
"RESET": SubResource("Animation_gx75t"),
"idle": SubResource("Animation_17lby")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8g72q"]
size = Vector2(30, 8)

[node name="Box" type="CharacterBody2D" groups=["enemy", "pusheable"]]
collision_layer = 4
collision_mask = 7
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_lijfw")
speed = 0.0
hit_speed = 0.0

[node name="spr_box" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -16)
texture = ExtResource("2_lh5bg")
hframes = 4

[node name="col_box" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_arwxv")
debug_color = Color(0.411765, 0.470588, 0.984314, 0.419608)

[node name="anim_box" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_tvdaq")
}

[node name="parteA" type="CPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(-8, -8)
emitting = false
amount = 2
one_shot = true
explosiveness = 1.0
texture = ExtResource("3_y1kgg")
direction = Vector2(-1, -1)
initial_velocity_min = 100.0
initial_velocity_max = 100.0

[node name="parteD" type="CPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(-8, 0)
emitting = false
amount = 2
one_shot = true
explosiveness = 1.0
texture = ExtResource("4_r2hl5")
direction = Vector2(-1, -1)
initial_velocity_min = 100.0
initial_velocity_max = 100.0

[node name="parteB" type="CPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(8, -8)
emitting = false
amount = 2
one_shot = true
explosiveness = 1.0
texture = ExtResource("5_4g8yu")
direction = Vector2(1, -1)
initial_velocity_min = 100.0
initial_velocity_max = 100.0

[node name="parteC" type="CPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(8, 0)
emitting = false
amount = 2
one_shot = true
explosiveness = 1.0
fract_delta = false
texture = ExtResource("6_3s03k")
direction = Vector2(1, -1)
initial_velocity_min = 100.0
initial_velocity_max = 100.0

[node name="explosion_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_wl375")

[node name="box_static" type="StaticBody2D" parent="."]

[node name="col_staric" type="CollisionShape2D" parent="box_static"]
position = Vector2(0, -28)
shape = SubResource("RectangleShape2D_8g72q")

[node name="hurt_time" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="anim_box" to="." method="_on_anim_box_animation_finished"]
[connection signal="timeout" from="hurt_time" to="." method="_on_hurt_time_timeout"]
